--- a/CHANGELOG-developer.asciidoc
+++ b/CHANGELOG-developer.asciidoc
@@ -12,10 +12,22 @@ other Beats should be migrated.
 
 Note: This changelog was only started after the 6.3 release.
 
-=== Beats version HEAD
-https://github.com/elastic/beats/compare/v6.3.0..6.x[Check the HEAD diff]
+=== Beats version 6.7
+https://github.com/elastic/beats/compare/6.6..6.7[View commits]
 
-The list below covers the major changes between 6.3.0 and HEAD only.
+==== Bugfixes
+
+- Align default index between elasticsearch and logstash and kafka output. {pull}10841[10841]
+- Fix duplication check for `append_fields` option. {pull}10959[10959]
+
+==== Added
+
+- Allow multiple object type configurations per field. {pull}9772[9772]
+
+=== Beats version 6.6
+https://github.com/elastic/beats/compare/v6.3.0..6.6[View commits]
+
+The list below covers the major changes between 6.3.0 and 6.7.0 only.
 
 ==== Breaking changes
 
