--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -3,107 +3,334 @@
 :issue: https://github.com/elastic/beats/issues/
 :pull: https://github.com/elastic/beats/pull/
 
-////////////////////////////////////////////////////////////
-// Template, add newest changes here
+[[release-notes-6.7.0]]
+=== Beats version 6.7.0
+https://github.com/elastic/beats/compare/v6.6.2...v6.7.0[View commits]
 
-=== Beats version HEAD
-https://github.com/elastic/beats/compare/v6.6.0...6.x[Check the HEAD diff]
+==== Breaking changes
+
+*Affecting all Beats*
+
+- Port settings have been deprecated in redis/logstash output and will be removed in 7.0. {pull}9915[9915]
+- Update the code of Central Management to align with the new returned format. {pull}10019[10019]
+- Allow Central Management to send events back to kibana. {issue}9382[9382]
+- Fix panic if fields settting is used to configure `hosts.x` fields. {issue}10824[10824] {pull}10935[10935]
+- Introduce query.default_field as part of the template. {pull}11205[11205]
+- Beats Xpack now checks for Basic license on connect. {pull}11296[11296]
+
+*Filebeat*
+
+- Filesets with multiple ingest pipelines added in {pull}8914[8914] only work with Elasticsearch >= 6.5.0 {pull}10001[10001]
+- Add grok pattern to support redis 5.0.3 log timestamp. {issue}9819[9819] {pull}10033[10033]
+- Ingesting Elasticsearch audit logs is only supported with Elasticsearch 6.5.0 and above {pull}8852[8852]
+- Remove `ecs` option from user_agent processors when loading pipelines with Filebeat 6.7.x into Elasticsearch < 6.7.0. {issue}10655[10655] {pull}11362[11362]
+
+*Heartbeat*
+
+- Remove monitor generator script that was rarely used. {pull}9648[9648]
+
+==== Bugfixes
+
+*Affecting all Beats*
+
+- Fix TLS certificate DoS vulnerability. {pull}10303[10303]
+- Fix panic and file unlock in spool on atomic operation (arm, x86-32). File lock was not released when panic occurs, leading to the beat deadlocking on startup. {pull}10289[10289]
+- Adding logging traces at debug level when the pipeline client receives the following events: onFilteredOut, onDroppedOnPublish. {pull}9016[9016]
+- Do not panic when no tokenizer string is configured for a dissect processor. {issue}8895[8895]
+- Fix a issue when remote and local configuration didn't match when fetching configuration from Central Management. {issue}10587[10587]
+- Add ECS-like selectors and dedotting to docker autodiscover. {issue}10757[10757] {pull}10862[10862]
+- Fix encoding of timestamps when using disk spool. {issue}10099[10099]
+- Include ip and boolean type when generating index pattern. {pull}10995[10995]
+- Using an environment variable for the password when enrolling a beat will now raise an error if the variable doesn't exist. {pull}10936[10936]
+- Cancelling enrollment of a beat will not enroll the beat. {issue}10150[10150]
+- Remove IP fields from default_field in Elasticsearch template. {pull}11399[11399]
+
+*Auditbeat*
+
+- Package: Disable librpm signal handlers. {pull}10694[10694]
+- Login: Handle different bad login UTMP types. {pull}10865[10865]
+- Fix hostname references in System module dashbords. {pull}11064[11064]
+- User dataset: Numerous fixes to error handling. {pull}10942[10942]
+
+*Filebeat*
+
+- Support IPv6 addresses with zone id in IIS ingest pipeline. {issue}9836[9836] error log: {pull}9869[9869] access log: {pull}10029[10029]
+- Fix bad bytes count in `docker` input when filtering by stream. {pull}10211[10211]
+- Fixed data types for roles and indices fields in `elasticsearch/audit` fileset {pull}10307[10307]
+- Cover empty request data, url and version in Apache2 module{pull}10846[10846]
+- Fix a bug with the convert_timezone option using the incorrect timezone field. {issue}11055[11055] {pull}11164[11164]
+- Change URLPATH grok pattern to support brackets. {issue}11135[11135] {pull}11252[11252]
+- Add support for iis log with different address format. {issue}11255[11255] {pull}11256[11256]
+- Add fix to parse syslog message with priority value 0. {issue}11010[11010]
+
+*Heartbeat*
+
+- `Host` header can now be overridden for HTTP requests sent by Heartbeat monitors. {pull}9148[9516]
+- Fix checks for TCP send/receive data {pull}10777[10777]
+
+*Journalbeat*
+
+- Do not stop collecting events when journal entries change. {pull}9994[9994]
+
+*Metricbeat*
+
+- Fix MongoDB dashboard that had some incorrect field names from `status` Metricset {pull}9795[9795] {issue}9715[9715]
+- Fix issue that would prevent collection of processes without command line on Windows. {pull}10196[10196]
+- Fixed data type for tags field in `docker/container` metricset {pull}10307[10307]
+- Fixed data type for tags field in `docker/image` metricset {pull}10307[10307]
+- Fixed data type for isr field in `kafka/partition` metricset {pull}10307[10307]
+- Fixed data types for various hosts fields in `mongodb/replstatus` metricset {pull}10307[10307]
+- Added function to close sql database connection. {pull}10355[10355]
+- Fix parsing error using GET in Jolokia module. {pull}11075[11075] {issue}11071[11071]
+
+*Winlogbeat*
+
+- Fix Winlogbeat escaping CR, LF and TAB characters. {issue}11328[11328] {pull}11357[11357]
+
+*Functionbeat*
+
+- Correctly extract Kinesis Data field from the Kinesis Record. {pull}11141[11141]
+- Add the required permissions to the role when deployment SQS functions. {issue}9152[9152]
+
+==== Added
+
+*Affecting all Beats*
+
+- Add ip fields to default_field in Elasticsearch template. {pull}11035[11035]
+- Add `cleanup_timeout` option to docker autodiscover, to wait some time before removing configurations after a container is stopped. {issue}10374[10374] {pull}10905[10905]
+
+*Auditbeat*
+
+- System module `process` dataset: Add user information to processes. {pull}9963[9963]
+- Add system `package` dataset. {pull}10225[10225]
+- Add system module `login` dataset. {pull}9327[9327]
+- Add `entity_id` fields. {pull}10500[10500]
+- Add seven dashboards for the system module. {pull}10511[10511]
+
+*Filebeat*
+
+- Add field log.source.address and log.file.path to replace source. {pull}9435[9435]
+- Support mysql 5.7.22 slowlog starting with time information. {issue}7892[7892] {pull}9647[9647]
+- Add support for ssl_request_log in apache2 module. {issue}8088[8088] {pull}9833[9833]
+- Add support for iis 7.5 log format. {issue}9753[9753] {pull}9967[9967]
+- Add support for MariaDB in the `slowlog` fileset of `mysql` module. {pull}9731[9731]
+- Add convert_timezone to nginx module. {issue}9839[9839] {pull}10148[10148]
+- Add support for Percona in the `slowlog` fileset of `mysql` module. {issue}6665[6665] {pull}10227[10227]
+- Added support for ingesting structured Elasticsearch audit logs {pull}8852[8852]
+- New iptables module that receives iptables/ip6tables logs over syslog or file. Supports Ubiquiti Firewall extensions. {issue}8781[8781] {pull}10176[10176]
+- Populate more ECS fields in the Suricata module. {pull}10006[10006]
+
+*Heartbeat*
+
+- Made monitors.d configuration part of the default config. {pull}9004[9004]
+- Autodiscover metadata is now included in events by default. So, if you are using the docker provider for instance, you'll see the correct fields under the `docker` key. {pull}10258[10258]
+
+*Metricbeat*
+
+- Add field `event.dataset` which is `{module}.{metricset}`.
+- Add more TCP statuses to `socket_summary` metricset. {pull}9430[9430]
+- Remove experimental tag from ceph metricsets. {pull}9708[9708]
+- Add `key` metricset to the Redis module. {issue}9582[9582] {pull}9657[9657]
+- Add DeDot for kubernetes labels and annotations. {issue}9860[9860] {pull}9939[9939]
+- Add docker `event` metricset. {pull}9856[9856]
+- Release Ceph module as GA. {pull}10202[10202]
+- Release windows Metricbeat module as GA. {pull}10163[10163]
+- Release traefik Metricbeat module as GA. {pull}10166[10166]
+- List filesystems on Windows that have an access path but not an assigned letter {issue}8916[8916] {pull}10196[10196]
+- Release uswgi Metricbeat module GA. {pull}10164[10164]
+- Release php_fpm module as GA. {pull}10198[10198]
+- Release Memcached module as GA. {pull}10199[10199]
+- Release etcd module as GA. {pull}10200[10200]
+- Release kubernetes apiserver and event metricsets as GA {pull}10212[10212]
+- Release Couchbase module as GA. {pull}10201[10201]
+- Release aerospike module as GA. {pull}10203[10203]
+- Release envoyproxy module GA. {pull}10223[10223]
+- Release mongodb.metrics and mongodb.replstatus as GA. {pull}10242[10242]
+- Release mysql.galera_status as Beta. {pull}10242[10242]
+- Release postgresql.statement as GA. {pull}10242[10242]
+- Release RabbitMQ Metricbeat module GA. {pull}10165[10165]
+- Release Dropwizard module as GA. {pull}10240[10240]
+- Release Graphite module as GA. {pull}10240[10240]
+- Release http.server metricset as GA. {pull}10240[10240]
+- Add support for MySQL 8.0 and tests also for Percona and MariaDB. {pull}10261[10261]
+- Release use of xpack.enabled: true flag in Elasticsearch and Kibana modules as GA. {pull}10222[10222]
+- Release Elastic stack modules (Elasticsearch, Logstash, and Kibana) as GA. {pull}10094[10094]
+- Add remaining memory metrics of pods in Kubernetes metricbeat module {pull}10157[10157]
+- Added 'server' Metricset to Zookeeper Metricbeat module {issue}8938[8938] {pull}10341[10341]
+- Add overview dashboard to Zookeeper Metricbeat module {pull}10379[10379]
+
+*Functionbeat*
+
+- Mark Functionbeat  as GA. {pull}10564[10564]
+- Functionbeat can now deploy a function for Kinesis. {pull}10116[10116]
+- Allow functionbeat to use the keystore. {issue}9009[9009]
+
+==== Deprecated
+
+*Filebeat*
+
+- Deprecate field source. Will be replaced by log.source.address and log.file.path in 7.0. {pull}9435[9435]
+
+*Metricbeat*
+
+- Deprecate field `metricset.rtt`. Replaced by `event.duration` which is in nano instead of micro seconds.
+
+*Packetbeat*
+
+- Support new TLS version negotiation introduced in TLS 1.3. {issue}8647[8647].
+
+==== Known Issue
+
+*Journalbeat*
+
+- Journalbeat requires at least systemd v233 in order to follow entries after journal changes (rotation, vacuum).
+
+[[release-notes-6.6.2]]
+=== Beats version 6.6.2
+https://github.com/elastic/beats/compare/v6.6.1...6.6.2[View commits]
+
+==== Bugfixes
+
+*Auditbeat*
+
+- System module: Fix and unify bucket closing logic. {pull}10897[10897]
+
+*Filebeat*
+
+- Fix a bug when converting NetFlow fields to snake_case. {pull}10950[10950]
+
+*Metricbeat*
+
+- Fix issue in kubernetes module preventing usage percentages to be properly calculated. {pull}10946[10946]
+
+*Packetbeat*
+
+- Avoid reporting unknown MongoDB opcodes more than once. {pull}10878[10878]
+
+*Winlogbeat*
+
+- Prevent Winlogbeat from dropping events with invalid XML. {pull}11006[11006]
+
+[[release-notes-6.6.1]]
+=== Beats version 6.6.1
+https://github.com/elastic/beats/compare/v6.6.0...6.6.1[View commits]
+
+==== Breaking changes
+
+*Affecting all Beats*
+
+- Fix stopping of modules started by kubernetes autodiscover. {pull}10476[10476]
+
+*Auditbeat*
+
+- Enable System module config on Windows. {pull}10237[10237]
+
+*Filebeat*
+
+- Fix bad bytes count in `docker` input when filtering by stream. {pull}10211[10211]
+- Add `convert_timezone` option to Logstash module to convert dates to UTC. {issue}9756[9756] {pull}9797[9797]
+- Add `convert_timezone` option to Elasticsearch module to convert dates to UTC. {issue}9756[9756] {pull}9761[9761]
+- Make elasticsearch/audit fileset be more lenient in parsing node name. {issue}10035[10035] {pull}10135[10135]
+
+*Journalbeat*
+
+- Fix fields.yml indentation of audit group which had the effect of creating an incomplete Elasticsearch index template. {pull}10556[10556]
+
+*Metricbeat*
+
+- Fix issue with `elasticsearch/node_stats` metricset (x-pack) not indexing `source_node` field. {pull}10639[10639]
+
+*Packetbeat*
+
+- Fixed a crash when using af_packet capture {pull}10477[10477]
+
+*Functionbeat*
+
+- Ensure that functionbeat is logging at info level not debug. {issue}10262[10262]
+
+==== Added
+
+*Filebeat*
+
+- Teach elasticsearch/audit fileset to parse out some more fields. {issue}10134[10134] {pull}10137[10137]
+
+*Journalbeat*
+
+- Migrate registry from previously incorrect path. {pull}10486[10486]
+
+[[release-notes-6.6.0]]
+=== Beats version 6.6.0
+https://github.com/elastic/beats/compare/v6.5.4...6.6[View commits]
 
 ==== Breaking changes
 
 *Affecting all Beats*
 
 - Dissect syntax change, use * instead of ? when working with field reference. {issue}8054[8054]
-- add_cloud_metadata initialization is performed asynchronously to avoid delays on startup. {pull}8845[8845]
-
-*Auditbeat*
 
 *Filebeat*
 
 - Allow beats to blacklist certain part of the configuration while using Central Management. {pull}9099[9099]
-- Fix parsing of GC entries in elasticsearch server log. {issue}9513[9513] {pull}9810[9810]
-
-*Heartbeat*
-
-- Remove monitor generator script that was rarely used. {pull}9648[9648]
-
-*Journalbeat*
 
 *Metricbeat*
 
-- Fix issue preventing diskio metrics collection for idle disks. {issue}9124[9124] {pull}9125[9125]
 - Allow beats to blacklist certain part of the configuration while using Central Management. {pull}9099[9099]
-
-*Packetbeat*
-
-*Packetbeat*
-
-*Winlogbeat*
 
 *Functionbeat*
 
 - The CLI will now log CloudFormation Stack events. {issue}8912[8912]
+- Correctly normalize Cloudformation resource name. {issue}10087[10087]
 
 ==== Bugfixes
 
 *Affecting all Beats*
 
-- Propagate Sync error when running SafeFileRotate. {pull}9069[9069]
 - Fix autodiscover configurations stopping when metadata is missing. {pull}8851[8851]
-- Log events at the debug level when dropped by encoding problems. {pull}9251[9251]
 - Refresh host metadata in add_host_metadata. {pull}9359[9359]
 - When collecting swap metrics for beats telemetry or system metricbeat module handle cases of free swap being bigger than total swap by assuming no swap is being used. {issue}6271[6271] {pull}9383[9383]
 - Ignore non index fields in default_field for Elasticsearch. {pull}9549[9549]
+- Update Golang to 1.10.6. {pull}9563[9563]
 - Update Kibana index pattern attributes for objects that are disabled. {pull}9644[9644]
 - Enforce validation for the Central Management access token. {issue}9621[9621]
-- Update Golang to 1.10.7. {pull}9640[9640]
-
-*Auditbeat*
+- Fix registry handle leak on Windows (https://github.com/elastic/go-sysinfo/pull/33). {pull}9920[9920]
+- Gracefully handle TLS options when enrolling a Beat. {issue}9129[9129]
+- Allow to unenroll a Beat from the UI. {issue}9452[9452]
+- The backing off now implements jitter to better distribute the load. {issue}10172[10172]
+- Fix config appender registration. {pull}9873[9873]
+- Fix TLS certificate DoS vulnerability. {pull}10304[10304]
 
 *Filebeat*
-- Correctly parse `December` or `Dec` in the Syslog input. {pull}9349[9349]
+
 - Fix improperly set config for CRI Flag in Docker Input {pull}8899[8899]
 - Just enabling the `elasticsearch` fileset and starting Filebeat no longer causes an error. {pull}8891[8891]
 - Fix macOS default log path for elasticsearch module based on homebrew paths. {pul}8939[8939]
-- Make sure the Filebeat Elastic licensed packages uses the Elastic binary instead of the OSS. {pull}8836[8836]
-- Fix installation of haproxy dashboard. {issue}9307[9307] {pull}9313[9313]
-- Don't generate incomplete configurations when logs collection is disabled by hints. {pull}9305[9305]
-- Stop runners disabled by hints after previously being started. {pull}9305[9305]
-- Fix saved objects in filebeat haproxy dashboard. {pull}9417[9417]
-- Fixed a memory leak when harvesters are closed. {pull}7820[7820]
-- Add `convert_timezone` option to Logstash module to convert dates to UTC. {issue}9756[9756] {pull}9797[9797]
-- Fix parsing of GC entries in elasticsearch server log. {issue}9513[9513] {pull}9810[9810]
+- Support IPv6 addresses with zone id in IIS ingest pipeline. {issue}9836[9836] error log: {pull}9869[9869] access log: {pull}10030[10030]
+- Support haproxy log lines without captured headers. {issue}9463[9463] {pull}9958[9958]
 
 *Heartbeat*
 
 - Heartbeat now always downloads the entire body of HTTP endpoints, even if no checks against the body content are declared. This fixes an issue where timing metrics would be incorrect in scenarios where the body wasn't used since the connection would be closed soon after the headers were sent, but before the entire body was. {pull}8894[8894]
-- Fixed rare issue where TLS connections to endpoints with x509 certificates missing either notBefore or notAfter would cause the check to fail with a stacktrace.  {pull}9566[9566]
-
-*Journalbeat*
-
-- Add missing journalbeat non breaking fixes. {pull}9106[9106]
 
 *Metricbeat*
 
 - Add missing namespace field in http server metricset {pull}7890[7890]
-- Fix race condition when enriching events with kubernetes metadata. {issue}9055[9055] {issue}9067[9067]
-- Fix panic on docker healthcheck collection on dockers without healthchecks. {pull}9171[9171]
 - Fix issue with not collecting Elasticsearch cross-cluster replication stats correctly. {pull}9179[9179]
 - The `node.name` field in the `elasticsearch/node` metricset now correctly reports the Elasticsarch node name. Previously this field was incorrectly reporting the node ID instead. {pull}9209[9209]
+- Fix panics in vsphere module when certain values where not returned by the API. {pull}9784[9784]
+- Fix pod UID metadata enrichment in Kubernetes module. {pull}10081[10081]
+
 
 *Packetbeat*
 
 - Fix issue with process monitor associating traffic to the wrong process. {issue}9151[9151] {pull}9443[9443]
+- Fix DHCPv4 dashboard that wouldn't load in Kibana. {issue}9850[9850]
 
-*Winlogbeat*
-
-*Functionbeat*
 
 ==== Added
 
 *Affecting all Beats*
-- Unify dashboard exporter tools. {pull}9097[9097]
 
+- Unify dashboard exporter tools. {pull}9097[9097]
 - Dissect will now flag event on parsing error. {pull}8751[8751]
 - Added the `redirect_stderr` option that allows panics to be logged to log files. {pull}8430[8430]
 - Add cache.ttl to add_host_metadata. {pull}9359[9359]
@@ -118,14 +345,11 @@ https://github.com/elastic/beats/compare/v6.6.0...6.x[Check the HEAD diff]
 *Filebeat*
 - Added `detect_null_bytes` selector to detect null bytes from a io.reader. {pull}9210[9210]
 - Added `syslog_host` variable to HAProxy module to allow syslog listener to bind to configured host. {pull}9366[9366]
-- Added support on Traefik for Common Log Format and Combined Log Format mixed which is the default Traefik format {issue}8015[8015] {issue}6111[6111] {pull}8768[8768].
 - Allow to force CRI format parsing for better performance {pull}8424[8424]
 - Add event.dataset to module events. {pull}9457[9457]
 - Add field log.source.address and log.file.path to replace source. {pull}9435[9435]
 - Add support for multi-core thread_id in postgresql module {issue}9156[9156] {pull}9482[9482]
 - Added netflow input type that supports NetFlow v1, v5, v6, v7, v8, v9 and IPFIX. {issue}9399[9399]
-
-*Heartbeat*
 
 *Journalbeat*
 
@@ -143,44 +367,94 @@ https://github.com/elastic/beats/compare/v6.6.0...6.x[Check the HEAD diff]
 - Support GET requests in Jolokia module. {issue}8566[8566] {pull}9226[9226]
 - Add freebsd support for the uptime metricset. {pull}9413[9413]
 - Add `host.os.name` field to add_host_metadata processor. {issue}8948[8948] {pull}9405[9405]
-- Add field `event.dataset` which is `{module}.{metricset).
-- Add more TCP statuses to `socket_summary` metricset. {pull}9430[9430]
-- Remove experimental tag from ceph metricsets. {pull}9708[9708]
-- Add `socket_summary` metricset to system defaults, removing experimental tag and supporting Windows {pull}9709[9709]
-
-*Packetbeat*
-
-*Winlogbeat*
-
-*Functionbeat*
+- Add field `event.dataset` which is `{module}.{metricset)`. {pull}9393[9393]
 
 ==== Deprecated
-
-*Affecting all Beats*
 
 *Filebeat*
 - Deprecate field source. Will be replaced by log.source.address and log.file.path in 7.0. {pull}9435[9435]
 
-*Heartbeat*
-
-*Journalbeat*
-
 *Metricbeat*
 
-- Deprecate field `metricset.rtt`. Replaced by `event.duration` which is in nano instead of micro seconds.
+- Deprecate field `metricset.rtt`. Replaced by `event.duration` which is in nano instead of micro seconds. {pull}9393[9393]
 
 *Packetbeat*
 
 - Support new TLS version negotiation introduced in TLS 1.3. {issue}8647[8647].
 
-*Winlogbeat*
+[[release-notes-6.5.4]]
+=== Beats version 6.5.4
+https://github.com/elastic/beats/compare/v6.5.3...v6.5.4[View commits]
 
-*Functionbeat*
+==== Bugfixes
 
-==== Known Issue
+*Affecting all Beats*
 
+- Update Golang to 1.10.6. This fixes an issue in remote certificate validation CVE-2018-16875. {pull}9563[9563]
 
-////////////////////////////////////////////////////////////
+*Filebeat*
+
+- Fix saved objects in filebeat haproxy dashboard. {pull}9417[9417]
+- Fixed a memory leak when harvesters are closed. {pull}7820[7820]
+
+==== Added
+
+*Filebeat*
+
+- Added support on Traefik for Common Log Format and Combined Log Format mixed which is the default Traefik format {issue}8015[8015] {issue}6111[6111] {pull}8768[8768].
+
+[[release-notes-6.5.3]]
+=== Beats version 6.5.3
+https://github.com/elastic/beats/compare/v6.5.2...v6.5.3[View commits]
+
+==== Bugfixes
+
+*Affecting all Beats*
+
+- Log events at the debug level when dropped by encoding problems. {pull}9251[9251]
+
+*Filebeat*
+
+- Correctly parse `December` or `Dec` in the Syslog input. {pull}9349[9349]
+- Don't generate incomplete configurations when logs collection is disabled by hints. {pull}9305[9305]
+- Stop runners disabled by hints after previously being started. {pull}9305[9305]
+- Fix installation of haproxy dashboard. {issue}9307[9307] {pull}9313[9313]
+
+[[release-notes-6.5.2]]
+=== Beats version 6.5.2
+https://github.com/elastic/beats/compare/v6.5.1...v6.5.2[View commits]
+
+==== Bugfixes
+
+*Affecting all Beats*
+
+- Propagate Sync error when running SafeFileRotate. {pull}9069[9069]
+
+*Metricbeat*
+
+- Fix panic on docker healthcheck collection on dockers without healthchecks. {pull}9171[9171]
+- Fix issue preventing diskio metrics collection for idle disks. {issue}9124[9124] {pull}9125[9125]
+
+[[release-notes-6.5.1]]
+=== Beats version 6.5.1
+https://github.com/elastic/beats/compare/v6.5.0...v6.5.1[View commits]
+
+==== Bugfixes
+
+*Affecting all Beats*
+- Fix windows binaries not having an enroll command. {issue}9096[9096] {pull}8836[8836]
+
+*Journalbeat*
+- Fix journalbeat sometimes hanging if output is unavailable. {pull}9106[9106]
+
+*Metricbeat*
+- Fix race condition when enriching events with kubernetes metadata. {issue}9055[9055] {issue}9067[9067]
+
+==== Added
+
+*Journalbeat*
+- Add minimal kibana dashboard. {pull}9106[9106]
+
 
 [[release-notes-6.5.0]]
 === Beats version 6.5.0
